fix: change scrollbar border

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@ a {
   .scrollbar::-webkit-scrollbar-thumb {
     background: #e0cbcb;
     border-radius: 100vh;
-    border: 3px solid #f6f7ed;
+    border: 1px solid #f6f7ed;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
